Blender 2.8 - Cursor stays like a cross after hovering over view rotation gizmo #63112

Closed
opened 2019-03-29 23:39:08 +01:00 by Lars Soderlind · 5 comments

System Information
Operating system: Windows 7 64-bit
Graphics card: GeForce GTX 1060 6GB

Blender Version
Broken: blender-2.80, 99d4321feff6-win64 2019-03-29
Worked: (optional)

Short description of error
Cursor stays as a cross after hovering over the view rotation gizmo and doesn't go back to arrow unless you hover certain other areas of the ui.
Similar thing can happen when you hover over the move and zoom icons but not as often. You have to move over both of them a few times before it happens.

Exact steps for others to reproduce the error
Just hover over the view rotation gizmo a bit and then back to 3d view.
See included gifs.

Cursor.gif

Cursor2.gif

**System Information** Operating system: Windows 7 64-bit Graphics card: GeForce GTX 1060 6GB **Blender Version** Broken: blender-2.80, 99d4321feff6-win64 2019-03-29 Worked: (optional) **Short description of error** Cursor stays as a cross after hovering over the view rotation gizmo and doesn't go back to arrow unless you hover certain other areas of the ui. Similar thing can happen when you hover over the move and zoom icons but not as often. You have to move over both of them a few times before it happens. **Exact steps for others to reproduce the error** Just hover over the view rotation gizmo a bit and then back to 3d view. See included gifs. ![Cursor.gif](https://archive.blender.org/developer/F6899660/Cursor.gif) ![Cursor2.gif](https://archive.blender.org/developer/F6899662/Cursor2.gif)
Author

Added subscriber: @soderlind

Added subscriber: @soderlind

#63966 was marked as duplicate of this issue

#63966 was marked as duplicate of this issue
Campbell Barton was assigned by William Reynish 2019-03-29 23:43:34 +01:00

Added subscribers: @txo, @nacioss

Added subscribers: @txo, @nacioss

This issue was referenced by 94b7e1dcc6

This issue was referenced by 94b7e1dcc6fa7d4a66dca0a24cdccf3b404bdf8e

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#63112
No description provided.