Fix T63112: Gizmos fail to restore last cursor